--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "webpack, modules",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "lodash": "^4.17.21"
